--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recharts": "^2.1.12",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
