--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ngneat/falso": "^6.0.1",
     "@reach/dialog": "^0.17.0",
     "@reach/visually-hidden": "^0.17.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,6 +19,7 @@
     "@testing-library/user-event": "^14.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "msw": "^0.42.3",
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -25,6 +27,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
@@ -44,5 +47,8 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
