--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ranger": "^2.1.0",
     "recharts": "^2.1.12",
     "styled-components": "^5.3.5"
   },
@@ -30,6 +31,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-ranger": "^2.0.1",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
